--- a/boards/cc2538dk/Makefile.include
+++ b/boards/cc2538dk/Makefile.include
@@ -11,25 +11,21 @@ PORT_LINUX ?= $(word 2,$(shell $(RIOTBASE)/dist/tools/usb-serial/find-tty.sh '^$
 PORT_DARWIN ?= $(firstword $(sort $(wildcard /dev/tty.usbserial*)))
 include $(RIOTBOARD)/Makefile.include.serial
 
-# debugger config
-export DEBUGGER = $(RIOTBOARD)/$(BOARD)/dist/debug.sh
-export DEBUGSERVER = JLinkGDBServer -device CC2538SF53
-export RESET = $(RIOTBOARD)/$(BOARD)/dist/reset.sh
-
 # Define the flash-tool and default port:
 export PROGRAMMER ?= cc2538-bsl
 
-ifeq ($(PROGRAMMER),cc2538-bsl)
+ifeq ($(PROGRAMMER),jlink)
+  # setup JLink for flashing
+  export JLINK_DEVICE := $(CPU_MODEL)
+  export JLINK_FLASH_ADDR := 200000
+  export JLINK_IF := JTAG
+  export TUI := 1
+  include $(RIOTBOARD)/Makefile.include.jlink
+else
+  export OFLAGS = -O binary --gap-fill 0xff
+  export HEXFILE = $(ELFFILE:.elf=.bin)
   export FLASHER = $(RIOTBASE)/dist/tools/cc2538-bsl/cc2538-bsl.py
-  export FFLAGS  = -p "$(PORT)" -e -w -v $(HEXFILE)
-else ifeq ($(PROGRAMMER),jlink)
-  export FLASHER = $(RIOTBOARD)/$(BOARD)/dist/flash.sh
-  export FFLAGS  = $(BINDIR) $(HEXFILE)
+  export FFLAGS  = -p "$(PORT)" -e -w -v -b 460800 $(HEXFILE)
 endif
-
-export OFLAGS    = -O binary --gap-fill 0xff
-export HEXFILE = $(ELFFILE:.elf=.bin)
-export DEBUGGER_FLAGS = $(BINDIR) $(ELFFILE)
-export RESET_FLAGS = $(BINDIR)
 
 export OBJDUMPFLAGS += --disassemble --source --disassembler-options=force-thumb
